# wallet-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  LEGAL  LICENSE  README.md  changelog.txt
.github/workflows/: linux-wallet-compile.yml  macos-wallet-compile.yml  ubuntu-20.04-wallet-compile.yml  windows-wallet-compile.yml
Wallet/: CMakeLists.txt  configure.py  create.bat
Wallet/Resources/: config-default.json  config-test-default.json
Wallet/Resources/mac/: Wallet.plist
Wallet/Resources/qrc/: config.qrc  wrapper.qrc
Wallet/Resources/qrc/wallet/: wallet.qrc
Wallet/Resources/win/: Wallet.rc
Wallet/SourceFiles/core/: base_integration.cpp  base_integration.h  launcher.cpp  launcher.h  main.cpp  pch.cpp  pch.h  public_key.h  qt_static_plugins.cpp  sandbox.cpp  sandbox.h  ui_integration.cpp  ui_integration.h  version.h
Wallet/SourceFiles/wallet/: application.cpp  application.h  config_upgrade_checker.cpp  config_upgrade_checker.h  phrases.cpp  phrases.h  ton_default_config.cpp  ton_default_config.h  ton_default_settings.cpp  ton_default_settings.h  tr.h  update_info_provider.cpp  update_info_provider.h  wallet.style  wrapper.style
Wallet/cmake/: wallet_options.cmake
Wallet/gyp/: Wallet.gyp  generate.py
Wallet/gyp/wallet/: linux.gypi  mac.gypi  qrc.gypi  sources.txt  win.gypi
auto-build/macos-10.15/: compile.sh  crashpad.patch  wallet.patch
auto-build/ubuntu-18.04/: compile.sh
auto-build/ubuntu-20.04/: build-wallet.sh
auto-build/windows/: compile.bat  lib_storage.patch  variant.patch
auto-build/windows10/: compile.bat
docs/: building-cmake.md  building-msvc.md  building-xcode.md
